--- a/index.html
+++ b/index.html
@@ -123,12 +123,21 @@
             <p><strong>Current Symptoms:</strong></p>
             <textarea name="symptoms" rows="3" cols="50" placeholder="Please describe your current symptoms..."></textarea>
 
-            <p><strong>Medical History - Check all that apply:</strong></p>
-            <input type="checkbox" name="history" value="chickenpox"> Chicken Pox<br>
-            <input type="checkbox" name="history" value="measles"> Measles<br>
-            <input type="checkbox" name="history" value="covid"> COVID-19<br>
-            <input type="checkbox" name="history" value="smallpox"> Small Pox<br>
-            <input type="checkbox" name="history" value="tetanus"> Tetanus<br>
+            <p><strong>Check all of the following that apply: Have you had:</strong></p>
+            <input type="checkbox" name="history" value="fever"> Fever<br>
+            <input type="checkbox" name="history" value="headache"> Headache<br>
+            <input type="checkbox" name="history" value="cough"> Cough<br>
+            <input type="checkbox" name="history" value="sore_throat"> Sore Throat<br>
+            <input type="checkbox" name="history" value="body_aches"> Body Aches<br>
+            <input type="checkbox" name="history" value="fatigue"> Fatigue<br>
+            <input type="checkbox" name="history" value="nausea"> Nausea<br>
+            <input type="checkbox" name="history" value="vomiting"> Vomiting<br>
+            <input type="checkbox" name="history" value="diarrhea"> Diarrhea<br>
+            <input type="checkbox" name="history" value="shortness_of_breath"> Shortness of Breath<br>
+            <input type="checkbox" name="history" value="chest_pain"> Chest Pain<br>
+            <input type="checkbox" name="history" value="dizziness"> Dizziness<br>
+            <input type="checkbox" name="history" value="rash"> Rash<br>
+            <input type="checkbox" name="history" value="loss_of_taste_smell"> Loss of Taste or Smell<br>
 
             <p><strong>Gender:</strong></p>
             <input type="radio" name="gender" value="male"> Male
